apply plugin: 'java'
apply plugin: 'maven'

group = 'ee.taltech.itcolledge'
version = '1.0-SNAPSHOT'

description = """java-zero-to-hero"""

sourceCompatibility = 11
targetCompatibility = 11
compileJava.options.encoding = 'UTF-8'

repositories {
     maven { url "https://repo.maven.apache.org/maven2" }
}
dependencies {
    compile group: 'com.google.guava', name: 'guava', version:'27.0.1-jre'
    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
    testCompile group: 'junit', name: 'junit', version:'4.12'
}
